# simulator

./: .cursorrules  Makefile  docker-compose.yml
.github/workflows/: ci.yml  formatting.yml  run-pytest.yml
backend/: .env.example  Dockerfile  dependencies.py  docker-entrypoint.sh  main.py  pyproject.toml
backend/app/core/: config.py
backend/app/models/: instrument_factor_exposure.py  macro_factor.py  news_event.py  news_event_factor.py
backend/app/schemas/: order.py
backend/app/services/: gbm.py  gbm_manager.py  instrument_manager.py  latency_profile.py  liquidity_bot.py  liquidity_bot_manager.py  news.py  order_book.py  order_generator.py  order_processor.py  user.py
backend/app/websocket/: price_engine.py
backend/mcp/: README.md  package-lock.json  package.json  server.mjs
backend/migrations/versions/: 2ed36e234faf_.py  ef22085699ce_modify_news_event_table.py
backend/scripts/: populate_tables.py
backend/tests/: README.md  test_gbm.py  test_order_book.py  test_order_generator.py
backend/tests/api/: conftest.py  test_main.py
backend/tests/unit/: test_gbm.py  test_order_book.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  globals.css  index.css
frontend/src/components/: BuySellWidget.tsx  Header.tsx  LeaderboardWidget.tsx  NewsFeedWidget.tsx  OrderbookWidget.tsx  PortfolioWidget.tsx  chart.tsx  mode-toggle.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx  (+1 more)
infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml  simulator_stack.py
k6/: health-smoke.js
(+31 files in other folders)
